--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,84 @@ $primary-white: #ffffff;
 $light-shadow: 0px 0px 40px 2px;
 $dark-shadow: 0px 0px 40px 2px;
 
-html {
+body,
+input {
     font-family: 'Lato', sans-serif;
+    
 }
+
+main {
+
+    width: 100%;
+    min-height: 100vh;
+    overflow: hidden;
+    background-color: white;
+    padding: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container {
+    position: relative;
+ width: 100%;
+ max-width: 1020px;
+ height: 640px;
+ background-color: aquamarine;
+ box-shadow: $light-shadow;
+}
+
+.container__box {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    
+    background-color: purple;
+}
+
+.checkout {
+    position: absolute;
+    height: 60%;
+    width: 65%;
+    top: 0;
+    left: 0;
+    background-color: pink;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    
+    
+}
+
+.checkout__detail {
+    margin-top: 20px;
+    height: 30%;
+}
+.checkout__product {
+    
+
+}
+.checkout__price {
+
+}
+
+.payment {
+    position: absolute;
+    height: 45%;
+    width: 45%;
+    left: 45%;
+    top: 0;
+    background-color: lightcoral;
+    border-radius: 2rem;
+    z-index: 2;
+}
+form {
+    max-width: 350px;
+    width: 100%;
+    background-color: lightblue;
+    margin: 0 auto;
+    height: 100%;
+    display: flex;
+}
+
